Create a new Angular Library that will hold re-useable components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "my-control-library": [
+        "dist/my-control-library"
+      ],
+      "my-control-library/*": [
+        "dist/my-control-library/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
