--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,41 @@
           }
         }
       }
+    },
+    "my-control-library": {
+      "projectType": "library",
+      "root": "projects/my-control-library",
+      "sourceRoot": "projects/my-control-library/src",
+      "prefix": "ui",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/my-control-library/tsconfig.lib.json",
+            "project": "projects/my-control-library/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/my-control-library/src/test.ts",
+            "tsConfig": "projects/my-control-library/tsconfig.spec.json",
+            "karmaConfig": "projects/my-control-library/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/my-control-library/tsconfig.lib.json",
+              "projects/my-control-library/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "storybook-ui-example"
 }
