--- a/projects/my-control-library/package.json
+++ b/projects/my-control-library/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^8.2.0",
-    "@angular/core": "^8.2.0"
+    "@angular/core": "^8.2.0",
+    "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.1.4",
+    "@angular/material": "^8.1.4"
   }
 }
